# hunger-games

./: .gitignore  README.md  main.py  pyproject.toml
data/: brawlers.json  modes.json  narrations.json
hunger_game/: __init__.py  brawler.py  constants.py  events.py  game_mode.py  match.py  narration_engine.py  narrator.py  observer.py  player.py  simulator.py  text_narrator.py  utils.py
public/: sample.txt
scripts/: format.py  lint.py  type_check.py
