[project]
name = "hunger-games"
version = "0.1.0"
description = "Brawl stars based zero player narration based gameplay"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
start = "main:main"

[tool.setuptools]
packages = ["hunger_game"]
py-modules = ["main"]

[tool.uv]
package = true
dev-dependencies = ["ruff", "pyright"]
